code for 95% cutoff

--- a/report/pers_schedule/biometrics_submission/bibliography.bib
+++ b/report/pers_schedule/biometrics_submission/bibliography.bib
@@ -1,6 +1,6 @@
 @article{bokhorst2015compliance,
 title={Compliance rates with the {Prostate Cancer Research International Active Surveillance (PRIAS)} protocol and disease reclassification in noncompliers},
-author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and {PRIAS} study group and others},
+author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and study group PRIAS and others},
 journal={European Urology},
 volume={68},
 number={5},
@@ -32,7 +32,7 @@ publisher={Elsevier}
 }
 
 @article{akhavan2017markov,
-  title={A Markov decision process model for cervical cancer screening policies in Colombia},
+  title={A {Markov} decision process model for cervical cancer screening policies in Colombia},
   author={Akhavan-Tabatabaei, Raha and S{\'a}nchez, Diana Marcela and Yeung, Thomas G},
   journal={Medical Decision Making},
   volume={37},
@@ -154,7 +154,7 @@ publisher={Elsevier}
 }
 
 @article{rizopoulos2014bma,
-title={{Combining Dynamic Predictions From Joint Models for Longitudinal and Time-to-Event Data Using Bayesian Model Averaging}},
+title={Combining Dynamic Predictions From Joint Models for Longitudinal and Time-to-Event Data Using {Bayesian} Model Averaging},
 author={Rizopoulos, Dimitris and Hatfield, Laura A. and Carlin, Bradley P. and Takkenberg, Johanna J.M.},
 journal={Journal of the American Statistical Association},
 volume={109},
@@ -200,7 +200,7 @@ publisher={Institute of Mathematical Statistics}
 
 @article{bokhorst2016decade,
 title={A decade of active surveillance in the {PRIAS} study: an update and evaluation of the criteria used to recommend a switch to active treatment},
-author={Bokhorst, Leonard P and Valdagni, Riccardo and Rannikko, Antti and Kakehi, Yoshiyuki and Pickles, Tom and Bangma, Chris H and Roobol, Monique J and PRIAS study group and others},
+author={Bokhorst, Leonard P and Valdagni, Riccardo and Rannikko, Antti and Kakehi, Yoshiyuki and Pickles, Tom and Bangma, Chris H and Roobol, Monique J and study group PRIAS and others},
 journal={European Urology},
 volume={70},
 number={6},
