--- a/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
@@ -1,24 +1,21 @@
 % !TEX root =  ../pers_schedules.tex
 
-\section{Choosing a schedule}
+\section{Choosing a Schedule}
 \label{sec : choosing_schedule}
 Given a particular schedule $S$ of biopsies, our next goal is to evaluate the efficacy of this schedule and to compare it with other schedules. To this end, we first present the criteria for evaluation of efficacy of biopsy schedules and then discuss the choice of the optimal schedule.
 
-\subsection{Evaluation of efficacy of schedules}
-The first criteria in the evaluation of efficacy of a schedule $S$ is the number of repeat biopsies $N^{bS}$ it conducts before GR is detected for a patient. More specifically, our interest lies in the marginal distribution $p(N^{bS})$ of number of biopsies for the entire population of patients. Various measures of efficacy can be extracted from this distribution, such as the mean $E(N^{bS})$, or the variance $\mbox{var}(N^{bS})$. Given the medical and financial burden associated with biopsies, a small mean and small variance is desired. Quantiles of $p(N^{bS})$ may also be of interest. For example, a schedule which takes less than 2 biopsies in 95\% cases may be preferred.
+\subsection{Evaluation of Efficacy of Schedules}
+We measure the efficacy of a schedule $S$ using two criteria, namely, for the $j$-th patient the number of biopsies $N^{bS}_j \epsilon [1, \infty]$ a schedule conducts before GR is detected, and the offset $O^S_j \epsilon [0, \infty]$ by which it overshoots the true GR time $T^*_j$. The offset $O^S_j$ is defined as $O^S_j = T^S_{j{N^{bS}_j}} - T^*_j$, where $T^S_{j{N^{bS}_j}} \geq T^*_j$ is the time at which GR is detected. Our interest lies in the joint distribution $p(N^{bS}_j, O^S_j)$ of the number of biopsies and the offset. Given the medical and financial burden associated with biopsies, ideally only one biopsy which leads to a zero offset should be conducted. That is, a method with a low mean number of biopsies $E(N^{bS}_j)$ as well a low mean offset $E(O^S_j)$ is desired. It is also desired that a method has low variance of the number of biopsies $\mbox{var}(N^{bS}_j)$, as well as low variance of the offset $\mbox{var}(O^S_j)$, so that the method works similarly for most patients. Quantiles of $p(N^{bS}_j)$ may also be of interest. For example, a schedule which conducts less than two biopsies in 95\% of the cases may be preferred.
 
-The second criteria in evaluation of efficacy of a schedule $S$ is the offset. The offset for a particular patient $j$ can be defined as $O^S_j = T^S_{j{N^{bS}_j}} - T^*_j$, where $N^{bS}_j$ is the number of biopsies required for patient $j$ before GR is detected and $T^S_{j{N^{bS}_j}} > T^*_j$ is the time at which GR is detected. Once again the interest lies in the marginal distribution $p(O^S)$ of the offset for the entire population of patients. A small mean $E(O^S)$ and small variance $\mbox{var}(O^S)$ are desired.
-
-\subsection{Finding the most optimal schedule}
-Given the multiple measure of efficacy of a schedule, the next step is to find the optimal schedule. Using principles from compound optimal designs \citep{lauter1976optimal} we propose to choose a schedule $S$ which minimizes the following loss function:
-
+\subsection{Finding the Optimal Schedule}
+Given the multiple measures of efficacy of a schedule, the next step is to find the optimal schedule. Using principles from compound optimal designs \citep{lauter1976optimal} we propose to choose a schedule $S$ which minimizes a loss function of the following form:
 \begin{equation}
 \label{eq : loss_func_sim_study_generic}
-L(S) = \sum_{g=1}^G \lambda_g \mathcal{G}_g(N^{bS})^{d_g=1}\mathcal{G}_g(O^S)^{d_g=0}.
+L(S) = \sum_{r=1}^R \eta_r \mathcal{R}_r(N^{bS}_j).
 \end{equation}
-where $\mathcal{G}_g(\cdot)$ is a measure of efficacy of $S$ based on either number of biopsies or the offset, and $d_g$ is the corresponding indicator for the choice. Some examples of $\mathcal{G}_g(\cdot)$ are mean, median, variance and quantile function. Constants $\lambda_1, \ldots, \lambda_G$, where $\lambda_g \epsilon [0,1]$ and $\sum_{g=1}^G \lambda_g = 1$, are weights to differentially weigh-in the contribution of each of the $G$ measures of efficacy. An example loss function is:
+where $\mathcal{R}_r(\cdot)$ is a measure of efficacy of either the number of biopsies or the offset (in the equation above, only $N^{bS}_j$ is used for brevity of notation). Some examples of $\mathcal{R}_r(\cdot)$ are mean, median, variance and quantile function. Constants $\eta_1, \ldots, \eta_R$, where $\eta_r \epsilon [0,1]$ and $\sum_{r=1}^R \eta_r = 1$, are weights to differentially weigh-in the contribution of each of the $R$ measures of efficacy. An example loss function is:
 \begin{equation}
 \label{eq : loss_func_sim_study}
-L(S) = \lambda_1 E(N^{bS}) + \lambda_2 E(O^S). 
+L(S) = \eta_1 E(N^{bS}_j) + \eta_2 E(O^S_j). 
 \end{equation}
-Here choosing values for $\lambda_1$ and $\lambda_2$ is not easy, because biopsies have serious medical side effects and consequently the cost of an extra biopsy cannot be quantified or compared to a unit increase in offset easily. To obviate this problem we utilize the equivalence between compound and constrained optimal designs \citep{cook1994equivalence}. More specifically, it can be shown that for any $\lambda_1$ and $\lambda_2$ there exists a constant $C>0$ for which minimization of loss function in (\ref{eq : loss_func_sim_study}) is equivalent to minimization of the same, subject to the constraint that $E(O^S) < C$. That is, the optimal schedule is the one with the least number of biopsies and an offset less than $C$. The choice of $C$ now can be based on the protocol of AS program. In the more generic case in (\ref{eq : loss_func_sim_study_generic}), the optimal solution can be found by minimizing $\mathcal{G}_G(\cdot)$ under the constraint $\mathcal{G}_g < C_g; g=1, \ldots, G-1$.
+The choice of $\eta_1$ and $\eta_2$ is not easy, because biopsies have serious medical side effects and consequently the cost of an extra biopsy cannot be quantified or compared to a unit increase in offset easily. To obviate this problem we utilize the equivalence between compound and constrained optimal designs \citep{cook1994equivalence}. More specifically, it can be shown that for any $\eta_1$ and $\eta_2$ there exists a constant $C>0$ for which minimization of loss function in (\ref{eq : loss_func_sim_study}) is equivalent to minimization of the loss function subject to the constraint that $E(O^S_j) < C$. That is, the optimal schedule is the one with the least number of biopsies and an offset less than $C$. The choice of $C$ now can be based on the protocol of AS program. In the more generic case in (\ref{eq : loss_func_sim_study_generic}), the optimal solution can be found by minimizing $\mathcal{R}_R(\cdot)$ under the constraint $\mathcal{R}_r(\cdot) < C_r; r=1, \ldots, R-1$.
