--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/ppd_time_to_GR.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/ppd_time_to_GR.tex
@@ -1,6 +1,6 @@
 % !TEX root =  ../pers_schedules.tex 
 
-\subsection{Posterior predictive distribution for time to GR}
+\subsection{Posterior Predictive Distribution for Time to GR}
 \label{subsec : ppd_time_to_GR}
 Let $\mathcal{Y}_j(s)$ denote the history of PSA levels taken up to time $s$ for patient $j$. The information from PSA history and repeat biopsies is manifested by the posterior predictive distribution $g(T^*_j)$, given by (conditioning on baseline covariates $\bmath{w}_i$ is dropped for notational simplicity hereafter):
 \begin{equation}
