--- a/report/pers_schedule/biometrics_submission/pers_schedules.tex
+++ b/report/pers_schedule/biometrics_submission/pers_schedules.tex
@@ -15,8 +15,8 @@
 %  as are almost all equations in the journal.  Use a recent version of the
 %  journal as a guide. 
 %  
-%\documentclass[useAMS,usenatbib, referee]{biom}
-\documentclass[useAMS, usenatbib]{biom}
+\documentclass[useAMS,usenatbib, referee]{biom}
+%\documentclass[useAMS, usenatbib]{biom}
 %
 %  If your system does not have the AMS fonts version 2.0 installed, then
 %  remove the useAMS option.
@@ -86,8 +86,8 @@
 %  the examples below in creating your author and affiliation information.
 %  Also consult a recent issue of the journal for examples of formatting.
 
-\title[Personalized schedules for prostate cancer biopsies]
-{Personalized schedules for prostate cancer biopsies}
+\title[Personalized Schedules for Prostate Cancer Biopsies]
+{Personalized Schedules for Prostate Cancer Biopsies}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -159,9 +159,9 @@
 
 \author{Anirudh Tomer$^{1,*}$\email{atomer@erasmusmc.nl}, 
 Daan Nieboer$^{2}$, 
-Monique J. Roobol$^3$,
-Ewout W. Steyerberg$^{2}$, 
-and Dimitris Rizopoulos$^{1}$ \\
+Monique J. Roobol$^3$, \\
+\textbf{Ewout W. Steyerberg}$^{\bmath{2}}$, 
+\textbf{and Dimitris Rizopoulos}$^{\bmath{1}}$ \\ \\
 $^{1}$Department of Biostatistics, Erasmus University Medical Center, the Netherlands \\
 $^{2}$Department of Public Health, Erasmus University Medical Center, the Netherlands \\
 $^{3}$Department of Urology, Erasmus University Medical Center, the Netherlands}
@@ -221,7 +221,7 @@ Accepted March} 0000.}
 %
 
 \begin{keywords}
-Personalized medicine; Prostate cancer; Active surveillance; Joint models.
+ Active surveillance; Joint models; Personalized medicine; Prostate cancer;.
 \end{keywords}
 
 %  As usual, the \maketitle command creates the title and author/affiliations
@@ -274,7 +274,7 @@ Personalized medicine; Prostate cancer; Active surveillance; Joint models.
 
 \section*{Supplementary Materials}
 
-Web Appendix A and C, referenced in Section~\ref{sec : jm_framework} and  Section~\ref{sec : pers_schedule_PRIAS}  respectively, and the derivation of Equation (\ref{eq : expected_time_survprob}) in Web Appendix B, are available in the document supplementary\_material.pdf.\vspace*{-8pt}
+Web Appendix A, C, D and E referenced in Section~\ref{sec : jm_framework},  Section~\ref{sec : pers_schedule_PRIAS},  and  Section~\ref{sec: discussion}, and the derivation of Equation (\ref{eq : expected_time_survprob}) and (\ref{eq : var_time_survprob}) in Web Appendix B, are available in the document supplementary\_material.pdf.\vspace*{-8pt}
 
 %Web Appendix A and C, referenced in Section~\ref{sec : jm_framework} and  Section~\ref{sec : pers_schedule_PRIAS}  respectively, and the derivation of Equations ~\ref{eq : expected_time_survprob} and ~\ref{eq : var_time_survprob} in Web Appendix B, are available with
 %this paper at the Biometrics website on Wiley Online Library.\vspace*{-8pt}
