--- a/report/pers_schedule/biometrics_submission/supplementary.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary.tex
@@ -102,7 +102,7 @@
 %  Also consult a recent issue of the journal for examples of formatting.
 
 \title[Web-based Supplementary Materials  for ``Personalized schedules'']
-{Web-based Supplementary Materials for ``Personalized schedules for biopsies in prostate cancer patients''}
+{Web-based Supplementary Materials for ``Personalized Schedules for Prostate Cancer Biopsies''}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -154,9 +154,15 @@
 %  Three or more authors from same institution with one corresponding email
 %  displayed
 
-\author{John Author$^*$\email{author@address.edu}, 
-Jane Author, and Dick Author \\
-Department of Statistics, University of Latex, Coventry CV4 7AL, U.K}
+\author{Anirudh Tomer$^{1,*}$\email{atomer@erasmusmc.nl}, 
+Daan Nieboer$^{2}$, 
+Monique J. Roobol$^3$, \\
+\textbf{Ewout W. Steyerberg}$^{\bmath{2}}$, 
+\textbf{and Dimitris Rizopoulos}$^{\bmath{1}}$ \\ \\
+$^{1}$Department of Biostatistics, Erasmus University Medical Center, the Netherlands \\
+$^{2}$Department of Public Health, Erasmus University Medical Center, the Netherlands \\
+$^{3}$Department of Urology, Erasmus University Medical Center, the Netherlands}
+
 
 %  Three or more authors, with at least two different institutions,
 %  more than one email displayed 
@@ -246,9 +252,12 @@ Accepted March} 0000.}
 \clearpage
 \input{supplementary/prias_param_estimates}
 \clearpage
+\input{supplementary/demonstration_911_2340}
+\clearpage
 \input{supplementary/sim_study_graphs}
 \clearpage
-
+\input{supplementary/source_code}
+\clearpage
 %  The \backmatter command formats the subsequent headings so that they
 %  are in the journal style.  Please keep this command in your document
 %  in this position, right after the final section of the main part of 
