--- a/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
@@ -2,8 +2,8 @@
 
 \section{Discussion}
 \label{sec: discussion}
-In this paper we presented personalized biopsy schedules for patients enrolled in AS programs. The problem at hand was that low risk prostate cancer patients enrolled in AS have to undergo repeat biopsies on a frequent basis for examination of disease progression, which causes medical side effects and also brings financial burden. Because of these issues, AS programs such as PRIAS were observing a high non-compliance for repeat biopsies. To approach these problems, we first used a joint model for time to event and longitudinal data to combine the information from PSA and repeat biopsy histories of patients in a more sophisticated manner than the existing PRIAS schedule. Using the fitted model, we proposed 2 different classes of personalized schedules for individual patients. They are schedules based on the central tendency of the distribution of time of GR of a patient, and schedules based on dynamic risk of GR. In addition we also proposed a combination (hybrid approach) of these 2 approaches. We then proposed criteria for evaluation of various schedules and a method to select the most optimal schedule.
+In this paper we presented personalized biopsy schedules for patients enrolled in AS programs. The problem at hand was that low risk prostate cancer patients enrolled in AS have to undergo repeat biopsies on a frequent basis for examination of disease progression, which causes medical side effects to patients and also brings financial burden on healthcare systems. Because of these issues, AS programs such as PRIAS are observing a high non-compliance for repeat biopsies, which further increases the chances of delayed detection of disease progression. To approach these problems we proposed personalized schedules based on joint model for time to event and longitudinal data. At any given point in time, the personalized schedules we proposed utilize a patient's information from historical PSA measurements and repeat biopsies conducted up to that time. We proposed two different classes of personalized schedules for individual patients. They are schedules based on the central tendency of the distribution of time of GR of a patient, and schedules based on dynamic risk of GR. In addition we also proposed a combination (hybrid approach) of these two approaches, which is effective even in scenarios where variance of time of GR for a patient is high. We then proposed criteria for evaluation of various schedules and a method to select the most optimal schedule.
 
-We demonstrated using PRIAS dataset that the personalized schedules adjust the time of biopsy on the basis of results from historical biopsies and PSA, even when the two are not in concordance with each other. Secondly, we conducted a simulation study to compare various schedules. We observed that personalized schedules based on dynamic risk of GR performed better than PRIAS schedule in terms of both mean and variance of number of biopsies and offset. We also observed that the PRIAS schedule conducted more biopsies and had higher offset for patients having higher mean GR time. We prefer the schedule based on dynamic risk of GR over PRIAS schedule on the basis of these results. The schedules based on expected and median time of GR conducted only 2 biopsies on average, which is very promising compared to PRIAS and annual schedule which conducted 4.9 and 5.2 biopsies on average, respectively. In addition, for the former two schedules, at least 90\% of the patients had an offset less than 36 months, which is the maximum possible offset in PRIAS. If a stronger restriction is prescribed for the offset, then we propose that the hybrid approach be used since it neither conducts too many biopsies nor it has a very high offset.
+We demonstrated using PRIAS dataset that the personalized schedules adjust the time of biopsy on the basis of results from historical biopsies and PSA, even when the two are not in concordance with each other (Web Appendix D). Secondly, we conducted a simulation study to compare various schedules. We observed that personalized schedules based on dynamic risk of GR performed better than PRIAS schedule in terms of both mean and variance of number of biopsies and offset. We also observed that the PRIAS schedule conducted more biopsies and had higher offset for patients having higher mean GR time. We prefer the schedule based on dynamic risk of GR over PRIAS schedule on the basis of these results. The schedules based on expected and median time of GR conducted only two biopsies on average, which is very promising compared to PRIAS and annual schedule which conducted 4.9 and 5.2 biopsies on average, respectively. In addition, for the former two schedules, at least 90\% of the patients had an offset less than 36 months, which is the maximum possible offset in PRIAS during the first 10 years of AS. If a stronger restriction is prescribed for the offset, then we propose that the hybrid approach be used since it neither conducts too many biopsies nor it has a very high offset.
 
-While each of the personalized methods has their own disadvantages and advantages, they also offer multiple choices to the AS programs to choose one as per their requirements, instead of choosing a common fixed schedule for all patients. In this regard, there is potential to develop more personalized schedules. For example, using loss functions which asymmetrically penalize overshooting/undershooting the target GR time, can be interesting. Depending upon the requirements it is also possible to choose $\kappa$ on the basis of binary classification accuracy measures which focus on non-cases as well. Although in this work we assumed that GR time was interval censored, in reality the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Models and schedules which account for error in measurement of time of GR, will be interesting to investigate further. Lastly, there is potential for including diagnostic information from Magnetic resonance imaging (MRI) or DRE. Unlike PSA levels such information may not always be continuous in nature, in which case our proposed methodology can be very easily extended by utilizing the framework of generalized linear mixed models.
+While each of the personalized methods has their own disadvantages and advantages, they also offer multiple choices to the AS programs to choose one as per their requirements, instead of choosing a common fixed schedule for all patients. In this regard, there is potential to develop more personalized schedules. For example, using loss functions which asymmetrically penalize overshooting/undershooting the target GR time can be interesting. Depending upon the requirements it is also possible to choose $\kappa$ on the basis of binary classification accuracy measures which focus on non-cases as well (Web Appendix E). Although in this work we assumed that GR time was interval censored, in reality the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Models and schedules which account for error in measurement of time of GR, will be interesting to investigate further. Lastly, there is potential for including diagnostic information from Magnetic resonance imaging (MRI) or DRE. Unlike PSA levels, such information may not always be continuous in nature, in which case our proposed methodology can be very easily extended by utilizing the framework of generalized linear mixed models.
