--- a/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
@@ -1,89 +1,99 @@
 % !TEX root =  ../pers_schedules.tex 
-
-\section{Simulation study}
+\section{Simulation Study}
 \label{sec: simulation_study}
-The application of personalized schedules for patients from PRIAS demonstrated that the schedules adapt according to the historical data of each patient. However we could not perform a full scale comparison between personalized and PRIAS schedules, because the true time of GR was not known for any of the PRIAS patients. To this end, we have performed a simulation study comparing personalized schedules based on expected time of GR, median time of GR and dynamic risk of GR, with a hybrid approach between median time of GR and dynamic risk of GR, PRIAS schedule and annual schedule. We employ these schedules for simulated patients enrolled in a hypothetical AS program, with the same entrance criteria as PRIAS.
+The application of personalized schedules for patients from PRIAS demonstrated that the schedules adapt according to the historical data of each patient. However we could not perform a full scale comparison between personalized and PRIAS schedules, because the true time of GR was not known for any of the PRIAS patients. To this end, we have performed a simulation study comparing personalized schedules with PRIAS and annual schedule, the details of which are presented next.
 
-\subsection{Simulation setup}
+\subsection{Simulation Setup}
 \label{subsec : simulation_setup}
-First we assume a population of patients enrolled in AS, whose PSA and hazard of GR follows a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters equal to the posterior mean of parameters (Web Appendix C of the supplementary material) estimated from the joint model fitted to PRIAS dataset. To check the efficacy of personalized schedules in scenarios with a mixture of patients, with early as well as late failure times, we assume that the patient population belongs to three equal sized subgroups $G_1, G_2, G_3$. The failure times in each subpopulation are controlled by different Weibull distributed baseline hazards for each. The corresponding shape and scale parameters $(k, \lambda$) are: $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for subgroups $G_1, G_2$ and $G_3$, respectively. The effect of these parameters is that the variance in time of GR is highest for $G_1$ and lowest for $G_3$, while the mean GR time is lowest in $G_1$ and highest in $G_3$.
+First we assume a population of patients enrolled in AS, with the same entrance criteria as that of PRIAS. The PSA and hazard of GR for patients from this population follows a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters equal to the posterior mean of parameters (Web Appendix C of the supplementary material) estimated from the joint model fitted to PRIAS dataset. We further assume that there are three equal sized subgroups $G_1$, $G_2$ and $G_3$ of patients in the population, differing in the time of GR. This was done because we wanted to test the efficacy of different schedules for a population with a mixture of patients, namely, those with faster progressing cancer, as well as those with slowly progressing cancer. The time of GR in each subgroup is controlled by a Weibull distributed baseline hazard. The shape and scale parameters $(k, \lambda$) of this distribution for the three subgroups are: $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for $G_1, G_2$ and $G_3$, respectively. The effect of these parameters is that the variance of time of GR is highest for $G_1$ and lowest for $G_3$, while the mean GR time is lowest in $G_1$ and highest in $G_3$.
 
-From this population we have sampled 500 datasets with 1000 patients each. Patients are randomly assigned to a subgroup. Further, each dataset is split into a training (750 patients) and a test (250 patients) part. The $k$-th simulated training dataset $\mathcal{D}^k$ is given by $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1, \ldots, 750\}$, where $\boldsymbol{y}_{ki}$ denote the PSA measurements for the $i$-th patient in $\mathcal{D}^k$. The frequency of PSA measurements is same as that in PRIAS. Other than simulating a true GR time $T^*_{ki}$, we also generate a random and non-informative censoring time $C_{ki}$. When $T_{ki} < C^*_{ki}$, then $l_{ki} = r_{ki} = T^*_{ki}$, otherwise $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the test patients, censoring time is not generated.
+From this population we have sampled 500 datasets with 1000 patients each. Patients are randomly assigned to a subgroup. Further, each dataset is split into a training (750 patients) and a test (250 patients) part. The $k$-th simulated training dataset $\mathcal{D}^k$ is given by $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1, \ldots, 750\}$, where $\boldsymbol{y}_{ki}$ denote the PSA measurements for the $i$-th patient in $\mathcal{D}^k$. The frequency of PSA measurements is same as that in PRIAS. Other than simulating a true GR time $T^*_{ki}$, we also generate a random and non-informative censoring time $C_{ki}$. When $T^*_{ki} < C_{ki}$, then $l_{ki} = r_{ki} = T^*_{ki}$, otherwise $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the test patients, censoring time is not generated.
 
-\subsection{Estimation}
-We fit a joint model of the specification given in (\ref{eq : long_model_prias}) and (\ref{eq : hazard_prias}) to each of the $\mathcal{D}^k, k=1,
-\ldots, 500$, and obtain a MCMC sample from the posterior distribution $p(\boldsymbol{\theta} \mid \mathcal{D}^k)$. We next obtain $g(T^*_{kj})$ for the $j$-th test patient and conduct hypothetical biopsies iteratively in accordance with the algorithm in Figure \ref{fig : sched_algorithm}. 	[TALK ABOUT DIFFERENT METHODS YOU COMPARE, AND HOW YOU COMPARE THEM....AND STILL IN ESTIMATION???] 
+We next fit a joint model of the specification given in (\ref{eq : long_model_prias}) and (\ref{eq : hazard_prias}) to each of the $\mathcal{D}^k, k=1, \ldots, 500$, and obtain a MCMC sample from the posterior distribution $p(\boldsymbol{\theta} \mid \mathcal{D}^k)$. We then obtain $g(T^*_{kl})$ for each of the $l$-th test patient of the $k$-th data set and conduct hypothetical biopsies for him. For every patient we conduct biopsies using the following six types of schedules: personalized schedules based on expected time of GR, median time of GR and dynamic risk of GR, and, a hybrid approach between median time of GR and dynamic risk of GR, PRIAS schedule and annual schedule. The biopsies are conducted iteratively in accordance with the algorithm in Figure \ref{fig : sched_algorithm}. 
 
-To compare schedules we require estimates of the various measures of efficacy of schedules (Section \ref{sec : choosing_schedule}). To this end, we compute pooled estimates of each of the $E[N^{bS}]$, $\mbox{var}[N^{bS}]$, $E[O^S]$ and $\mbox{var}[O^S]$, as below:
+To compare the aforementioned schedules we require estimates of the various measures of efficacy of schedules (Section \ref{sec : choosing_schedule}). To this end, we compute pooled estimates of each of the $E(N^{bS}_j)$, $\mbox{var}(N^{bS}_j)$, $E(O^S_j)$ and $\mbox{var}(O^S_j)$, as below:
 \begin{align*}
-\widehat{E[O^S]} &= \frac{\sum_{k=1}^{500} n_k \widehat{E[O^S_k]}}{\sum_{k=1}^{500} n_k}, \\
-\widehat{\mbox{var}[O^S]} &= \frac{\sum_{k=1}^{500} (n_k - 1) \widehat{\mbox{var}[O^S_k]}}{\sum_{k=1}^{500} (n_k-1)}, 
+\widehat{E(O^S_j)} &= \frac{\sum_{k=1}^{500} n_k \widehat{E(O^S_k)}}{\sum_{k=1}^{500} n_k}, \\
+\widehat{\mbox{var}(O^S_j)} &= \frac{\sum_{k=1}^{500} (n_k - 1) \widehat{\mbox{var}(O^S_k)}}{\sum_{k=1}^{500} (n_k-1)}, 
 \end{align*}
-where $n_k$ denotes the number of test patients, $\widehat{E[O^S_k]} = {\sum_{j=1}^{n_k}O^S_{kj}}/{n_k}$ is the estimated mean and $\widehat{\mbox{var}[O^S_k]} = {\sum_{j=1}^{n_k}\big\{O^S_{kj} - \widehat{E[O^S_k]}\big\}^2}/{n_k-1}$ is the estimated variance of the offset for the $k$-th simulation. The estimates for number of biopsies $N^{bS}$ are obtained similarly.
+where $n_k$ denotes the number of test patients, $\widehat{E(O^S_k)} = {\sum_{l=1}^{n_k}O^S_{kl}}/{n_k}$ is the estimated mean and $\widehat{\mbox{var}(O^S_k)} = {\sum_{l=1}^{n_k}\big\{O^S_{kl} - \widehat{E(O^S_k)}\big\}^2}/(n_k-1)$ is the estimated variance of the offset for the $k$-th simulation. The estimates for number of biopsies are obtained similarly.
 
 \subsection{Results}
-The pooled estimates of the various measures of efficacy are summarized in Table \ref{table : sim_study_pooled_estimates}. In addition mean offset is plotted against mean number of biopsies in Figure \ref{fig : meanNbVsOffset}. From the figure it is evident that there is an inverse relationship between $E[N^{bS}]$ and $E[O^S]$. For example, the annual schedule conducts 5.2 biopsies on average, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average, the least among all schedules, but it also has the highest average offset of 15 months. The schedule based on median time of GR performs similar to that based on expected time of GR. Since the annual schedule attempts to contain the offset within an year it has the least $\mbox{var}[O^S]$. However to achieve so, it conducts a wide range of number of biopsies from patient to patient, i.e. highest $\mbox{var}[N^{bS}]$. Schedules based on expected and median time of GR perform the opposite of annual schedule in terms of variance of $N^{bS}$ and $O^S$.
+The pooled estimates of the various measures of efficacy are summarized in Table \ref{table : sim_study_pooled_estimates}. In addition, mean offset is plotted against mean number of biopsies in Figure \ref{fig : meanNbVsOffset}. From the figure it is evident that across the methods there is an inverse relationship between $E(N^{bS}_j)$ and $E(O^S_j)$. For example, the annual schedule conducts 5.2 biopsies on average, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average, the least among all schedules, but it also has the highest average offset of 15 months. The schedule based on median time of GR performs similar to that based on expected time of GR. Since the annual schedule attempts to contain the offset within an year it has the least $\mbox{SD}(O^S_j) = \sqrt{\mbox{var}(O^S_j)}$. However to achieve so, it conducts a wide range of number of biopsies from patient to patient, i.e., highest $\mbox{SD}(N^{bS}_j) = \sqrt{\mbox{var}(N^{bS}_j)}$. Schedules based on expected and median time of GR perform the opposite of annual schedule in terms of $\mbox{SD}(N^{bS}_j)$ and $\mbox{SD}(O^S_j)$.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/meanNbVsOffset_all.png}}
-\caption{Estimated mean number of biopsies and mean offset (months) for the 6 schedules, using all subgroups. Method names are abbreviated for better readability.}
+\caption{Estimated mean number of biopsies and mean offset (months) for the 6 schedules, using all 124781 patients. Method names are abbreviated for better readability.}
 \label{fig : meanNbVsOffset}
 \end{figure}
 
+%124781 = 41484 + 41423 + 41874
 \begin{table}
 \caption{Estimated mean and standard deviation of the number of biopsies and offset (months). Method names are abbreviated for consistency with Figure \ref{fig : meanNbVsOffset}.}
 \label{table : sim_study_pooled_estimates}
 \begin{tabular}{lrrrr}
 \Hline
-\multicolumn{5}{c}{a) All subgroups: 101823 patients}\\
+\multicolumn{5}{c}{a) All subgroups: 125000 patients}\\
 \hline
-Schedule          & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule          & $E(N^{bS}_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
 \hline
-Annual         & 5.24            & 6.01                & 2.53          & 3.45              \\
-PRIAS          & 4.86            & 8.49                & 2.35          & 8.69\\
-Exp. GR time & 1.92            & 15.06               & 1.19          & 12.11             \\
-Med. GR time & 2.07            & 13.87               & 1.42          & 11.80              \\
-Dyn. risk GR       & 4.69            & 6.66                & 2.20           & 4.37              \\
-Mixed       & 3.75            & 9.69                & 1.71          & 7.02              \\
+Annual         & 5.24            & 6.01                & 2.53          & 3.46              \\
+PRIAS          & 4.90            & 7.71                & 2.36          & 6.31\\
+Exp. GR time & 1.92            & 15.08               & 1.19          & 12.11             \\
+Med. GR time & 2.06            & 13.88               & 1.41          & 11.80              \\
+Dyn. risk GR       & 4.69            & 6.66                & 2.19           & 4.38              \\
+Hybrid       & 3.75            & 9.70                & 1.71          & 7.25              \\
 \hline
-\multicolumn{5}{c}{b) Subgroup $G_1$: 33680 patients}\\
+\multicolumn{5}{c}{b) Subgroup $G_1$: 41557 patients}\\
 \hline
-Schedule        & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule        & $E(N^{bS}_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
 \hline
-Annual         & 4.33            & 6.02                & 3.14          & 3.44              \\
-PRIAS          & 4.05            & 7.98                & 2.87          & 8.08     \\
-Exp. GR time & 1.72            & 21.65               & 1.47          & 14.77             \\
-Med. GR time & 1.85            & 20.67               & 1.77          & 14.64             \\
-Dyn. risk GR       & 3.85            & 6.76                & 2.69          & 4.45              \\
-Mixed       & 3.24            & 10.24               & 2.17          & 7.73              \\
+Annual         & 4.32            & 6.02                & 3.13          & 3.44              \\
+PRIAS          & 4.07            & 7.44                & 2.88          & 6.11    \\
+Exp. GR time & 1.72            & 21.65               & 1.47          & 14.75             \\
+Med. GR time & 1.84            & 20.66               & 1.76          & 14.62             \\
+Dyn. risk GR       & 3.85            & 6.75                & 2.69          & 4.44              \\
+Hybrid       & 3.25            & 10.25               & 2.16          & 8.07              \\
 \hline      
-\multicolumn{5}{c}{c) Subgroup $G_2$: 33907 patients}\\
+\multicolumn{5}{c}{c) Subgroup $G_2$: 41496 patients}\\
 \hline
-Schedule        & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule        & $E(N^{bS}_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
 \hline
-Annual         & 5.18            & 5.99                & 2.13          & 3.48              \\
-PRIAS          & 4.82            & 8.57                & 1.99          & 8.65        \\
-Exp. GR time & 1.78            & 13.53               & 0.98          & 9.82              \\
-Med. GR time & 1.90             & 12.31               & 1.16          & 9.43              \\
-Dyn. risk GR       & 4.63            & 6.66                & 1.82          & 4.34              \\
-Mixed       & 3.68            & 10.30                & 1.38          & 7.17              \\
+Annual         & 5.18            & 5.98                & 2.13          & 3.47              \\
+PRIAS          & 4.85            & 7.70                & 2.00          & 6.29        \\
+Exp. GR time & 1.77            & 13.54               & 0.98          & 9.83              \\
+Med. GR time & 1.89             & 12.33               & 1.16          & 9.44              \\
+Dyn. risk GR       & 4.63            & 6.66                & 1.82          & 4.37              \\
+Hybrid       & 3.68            & 10.32                & 1.37          & 7.45              \\
 \hline      
-\multicolumn{5}{c}{d) Subgroup $G_3$: 34236 patients}\\
+\multicolumn{5}{c}{d) Subgroup $G_3$: 41947 patients}\\
 \hline
-Schedule        & $E[N^{bS}]$ & $E[O^{S}]$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule        & $E(N^{bS}_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
 \hline
-Annual         & 6.2             & 6.01                & 1.77          & 3.46              \\
-PRIAS          & 5.70             & 8.92                & 1.73          & 9.27        \\
-Exp. GR time & 2.27            & 10.11               & 0.99          & 7.53              \\
-Med. GR time & 2.45            & 8.71                & 1.15          & 6.36              \\
-Dyn. risk GR       & 5.57            & 6.58                & 1.56          & 4.32              \\
-Mixed       & 4.31            & 8.54                & 1.27          & 5.91              \\
+Annual         & 6.20             & 6.02                & 1.76          & 3.46              \\
+PRIAS          & 5.76             & 7.98                & 1.71         & 6.51        \\
+Exp. GR time & 2.27            & 10.09               & 0.99          & 7.47              \\
+Med. GR time & 2.45            & 8.70                & 1.15          & 6.32              \\
+Dyn. risk GR       & 5.58            & 6.58                & 1.56          & 4.33              \\
+Hybrid       & 4.32            & 8.55                & 1.26          & 5.91              \\
 \hline     
 \end{tabular}
 \end{table}
 
-The PRIAS schedule conducts only 0.4 biopsies less than annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs better than PRIAS schedule in all aspects. The hybrid approach combines the benefits of methods with low $E[N^{bS}]$ and $\mbox{var}[N^{bS}]$, and methods with low $E[O^{S}]$ and $\mbox{var}[O^S]$. It conducts 1.5 less biopsies than annual schedule on average and with $E[O^{S}]$ at 9.7 months it detects GR within an year since its occurrence. The variance in number of biopsies and offset are not only not high but also lesser than PRIAS schedule.
+The PRIAS schedule conducts only 0.3 biopsies less than annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs better than PRIAS schedule in all aspects. The hybrid approach combines the benefits of methods with low $E(N^{bS}_j)$ and $\mbox{SD}(N^{bS}_j)$, and methods with low $E(O^S_j)$ and $\mbox{SD}(O^S_j)$. It conducts 1.5 less biopsies than annual schedule on average and with a $E(O^S_j)$ of 9.7 months it detects GR within an year since its occurrence. Moreover, it has both $\mbox{SD}(N^{bS}_j)$ and $\mbox{SD}(O^S_j)$ comparable to PRIAS.
 
 We next discuss the performance of these schedules for each of the 3 subgroups $G_1, G_2$ and $G_3$. We observe that annual schedule remains the most consistent across subgroups in terms of the offset, but it varies the most in terms of number of biopsies, conducting 2 extra biopsies in subgroup $G_3$ (highest mean, low variance of GR time) than in $G_1$ (low mean, high variance of GR time). The performance of schedule based on expected time of GR is the most consistent in terms of number of biopsies but most inconsistent in terms of offset. It performs the best in subgroup $G_3$. For the dynamic risk of GR based schedule and the hybrid approach the dynamics are similar to that of the annual schedule. Unlike the latter two schedules, the PRIAS schedule not only conducts more biopsies in $G_3$ than $G_1$ but also has a higher offset for $G_3$ than $G_1$.
 
-The choice of the optimal schedule using (\ref{eq : loss_func_sim_study_generic}) depends on the chosen measures of efficacy. For example, schedule based on dynamic risk of GR is the most optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 90\% of the patients have an average offset less than an year. Schedule based on expected time of GR is most optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 80\% of the patients have an average offset less than 2 years. For at least 90\% of the patients it detects GR within 3 years with 2 biopsies on average. We however recommend the hybrid approach, since it conducts only 3.8 biopsies on average while guaranteeing an offset of 24 months for 95\% of the patients and 36 months for 99.9\% of the patients. Besides if further cutoffs are required on variance of number of biopsies or offset they are not too high either for the hybrid approach.
+\begin{figure}[!htb]
+\centerline{\includegraphics[width=\columnwidth]{images/sim_study/nbBoxPlot_all.png}}
+\caption{Boxplot showing variation in number of biopsies conducted by different methods, using all simulated patients.}
+\label{fig : nbBoxPlot_all}
+\end{figure}
+
+\begin{figure}[!htb]
+\centerline{\includegraphics[width=\columnwidth]{images/sim_study/offsetBoxPlot_all.png}}
+\caption{Boxplot showing variation in biopsy offset (months) for different methods, using all simulated patients. X-axis is trimmed at 70 months for visual clarity.}
+\label{fig : offsetBoxPlot_all}
+\end{figure}
+
+The choice of the optimal schedule using (\ref{eq : loss_func_sim_study_generic}) depends on the chosen measures of efficacy. For example, schedule based on dynamic risk of GR is the optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 90\% of the patients have an average offset less than an year (Figure \ref{fig : nbBoxPlot_all} and \ref{fig : offsetBoxPlot_all}). The schedule based on expected time of GR is optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 80\% of the patients have an average offset less than 2 years. For at least 90\% of the patients it detects GR within 3 years, while conducting 2 biopsies on average. We however recommend the hybrid approach, since it conducts only 3.8 biopsies on average while guaranteeing an offset of 24 months for 95\% of the patients and 36 months for 99.9\% of the patients. Besides if further cutoffs are required on variance of number of biopsies or offset they are not too high either for the hybrid approach.
